[package]
name = "makiko"
version = "0.2.0"
edition = "2021"

authors = ["Jan Špaček <patek.mail@gmail.com>"]
homepage = "https://github.com/honzasp/makiko"
repository = "https://github.com/honzasp/makiko"
documentation = "https://docs.rs/makiko"
license = "Unlicense"
readme = "README.md"

keywords = ["ssh", "ssh-client", "tokio", "async"]
categories = ["network-programming", "asynchronous"]
description = "Asynchronous SSH client library"

[[test]]
name = "compat"
path = "tests/compat/main.rs"
harness = false

[[test]]
name = "keys"
path = "tests/keys/main.rs"

[dependencies]
aes = "0.8"
aes-gcm = "^0.10.0-pre"
bcrypt-pbkdf = "0.9"
bytes = "1.1"
cbc = "0.1"
chacha20 = "0.9"
ctr = "0.9"
derivative = "2.2"
ecdsa = {version = "0.14", features = ["sign", "verify"]}
ed25519-dalek = "1.0"
futures-core = "0.3"
guard = "0.5"
hex-literal = "0.3"
hmac = "0.12"
log = "0.4"
num-bigint-dig = {version = "0.8", features = ["rand"]}
p256 = "0.11"
p384 = "0.11"
parking_lot = "0.12"
pem = "1.0"
pin-project = "1.0"
poly1305 = "0.7"
rand = {version = "0.8", features = ["getrandom"]}
rand_0_7 = {version = "0.7", package = "rand"} # because of x25519-dalek
rand_chacha = "0.3"
rsa = {version = "0.6", default-features = false}
sha-1 = {version = "0.10", default-features = false}
sha2 = "0.10"
thiserror = "1.0"
tokio = {version = "1", features = ["sync"]}
tokio-util = {version = "0.7", features = []}
x25519-dalek = "1.1" # due to issue #89

[dev-dependencies]
anyhow = "1"
bollard = "0.12"
clap = "3.2"
colored = "2.0"
enclose = "1.1"
env_logger = "0.9"
futures = "0.3"
regex = "1.5"
tokio = {version = "1", features = ["full"]}

[features]
debug_less_secure = []
