[package]
name = "makiko"
version = "0.2.6-pre"
edition = "2021"

authors = ["Jan Špaček <patek.mail@gmail.com>"]
homepage = "https://honzasp.github.io/makiko"
repository = "https://github.com/honzasp/makiko"
documentation = "https://docs.rs/makiko"
license = "Unlicense"
readme = "README.md"

keywords = ["ssh", "ssh-client", "tokio", "async"]
categories = ["network-programming", "asynchronous"]
description = "Asynchronous SSH client library in pure Rust"

[[test]]
name = "compat"
path = "tests/compat/main.rs"
harness = false

[[test]]
name = "keys"
path = "tests/keys/main.rs"

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
bcrypt-pbkdf = "0.10"
bytes = "1.1"
cbc = "0.1"
chacha20 = "0.9"
ctr = "0.9"
derivative = "2.2"
des = { version = "0.8", optional = true }
ecdsa = {version = "0.16", features = ["signing", "verifying", "digest"]}
ed25519-dalek = {version = "^2.1", features = ["pkcs8"]}
futures-core = "0.3"
hex-literal = "0.4"
hmac = "0.12"
log = "0.4"
num-bigint-dig = {version = "0.8", features = ["rand"]}
p256 = "0.13"
p384 = "0.13"
parking_lot = "0.12"
pem = "3.0"
pin-project = "1.0"
pkcs8 = {version = "0.10", features = ["encryption"]}
poly1305 = "0.8"
rand = {version = "0.8", features = ["getrandom"]}
rand_chacha = "0.3"
regex = {version = "1.6", features = ["std"], default-features = false}
regex-syntax = {version = "0.8", features = [], default-features = false}
rsa = {version = "0.9"}
sha-1 = {version = "0.10", features = ["oid"]}
sha2 = {version = "0.10", features = ["oid"]}
thiserror = "1.0"
tokio = {version = "1", features = ["sync"]}
tokio-util = {version = "0.7", features = []}
x25519-dalek = "^2.0.0-rc"

[dev-dependencies]
anyhow = "1"
bollard = "0.16"
clap = "4.1"
colored = "2.0"
enclose = "1.1"
env_logger = "0.11"
futures = "0.3"
home = "0.5"
regex = {version = "1.6"}
rustix = {version = "0.38", features = ["termios"]}
tokio = {version = "1", features = ["full"]}

[features]
debug-less-secure = []
insecure-crypto = ["dep:des"]

[package.metadata.docs.rs]
features = ["insecure-crypto"]
